--- a/PetApp_Empresa/Views/UsuarioRols/Index.cshtml
+++ b/PetApp_Empresa/Views/UsuarioRols/Index.cshtml
@@ -72,7 +72,7 @@
     .container {
         margin: 20px auto;
         max-width: 80%;
-        background-color: white;
+        background-color: black;
         border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         padding: 20px;
@@ -85,19 +85,25 @@
         margin: 20px 0;
         font-size: 16px;
         text-align: left;
-        background-color: black;
     }
 
     thead {
         background-color: #BA0C2F; /* Rojo Univalle */
-        color: ;
         text-transform: uppercase;
     }
+
+        thead th {
+            color: black; /* Negro para el encabezado */
+        }
 
     th, td {
         padding: 10px 15px;
         border: 1px solid #ddd;
         text-align: left;
+    }
+
+    td, th {
+        color: #000; /* Negro para el texto */
     }
 
     tbody tr:nth-child(even) {
@@ -138,5 +144,4 @@
             a[asp-action="Create"]:hover {
                 background-color: #0056b3;
             }
-
 </style>
