se agrego modificaciones al controaldor de carrito de compras, se agrego dos vistas nuevas de pago con qr y se modifico el ResumenCarrito

--- a/PetApp_Empresa/Views/CarritoDeCompras/HistorialCompras.cshtml
+++ b/PetApp_Empresa/Views/CarritoDeCompras/HistorialCompras.cshtml
@@ -22,7 +22,7 @@
                     <td>
                         @if (compra.Tarjeta != null && !string.IsNullOrEmpty(compra.Tarjeta.Numero) && compra.Tarjeta.Numero.Length >= 4)
                         {
-                            <span>************ @compra.Tarjeta.Numero</span>
+                            <span>************ @compra.Tarjeta.Numero[^4..]</span>
                         }
                         else
                         {
@@ -55,10 +55,10 @@
                                             <td>@(detalle.Accesorio?.Nombre ?? "Producto no disponible")</td>
                                             <td>@detalle.Cantidad</td>
                                             <td>@detalle.PrecioUnitario.ToString("C")</td>
-                                            <td>@(detalle.PrecioUnitario * detalle.Cantidad)</td>
+                                            <td>@(detalle.PrecioUnitario * detalle.Cantidad).ToString("C")</td>
                                         </tr>
                                     }
-                                }   
+                                }
                                 else
                                 {
                                     <tr>
