--- a/PetApp_Empresa/Views/CarritoDeCompras/PagarConQR.cshtml
+++ b/PetApp_Empresa/Views/CarritoDeCompras/PagarConQR.cshtml
@@ -1,16 +1,22 @@
 ﻿@{
-    ViewData["Title"] = "Pagar con QR";
+    ViewBag.Title = "Pagar con QR";
 }
 
 <h2>Pagar con QR</h2>
-<p>Por favor, descarga la imagen para proceder a realizar el pago.</p>
 
-<div style="text-align: center;">
-    <!-- Actualiza la ruta de la imagen -->
-    <img src="/comprobantes/QR.jpeg" alt="Código QR" style="width: 300px; height: 340px;" />
-</div>
+@if (!string.IsNullOrEmpty(ViewBag.QRImagePath))
+{
+    <div class="text-center">
+        <p>Por favor, descarga la imagen para proceder a realizar el pago.</p>
+        <img src="@ViewBag.QRImagePath" alt="Código QR para pago" class="img-fluid" style="max-width: 300px; height: 340px;" />
 
-<div style="text-align: center; margin-top: 20px;">
-    <a href="/comprobantes/QR.jpeg" download="QR_Pago.jpeg" class="btn btn-primary">Descargar imagen</a>
-    <a href="/CarritoDeCompras/FormularioTransaccionBancaria" class="btn btn-success">Siguiente paso</a>
-</div>
+        <div class="mt-3">
+            <a href="@ViewBag.QRImagePath" download class="btn btn-primary">Descargar Imagen</a>
+            <a href="/CarritoDeCompras/FormularioTransaccionBancaria" class="btn btn-success">Siguiente Paso</a>
+        </div>
+    </div>
+}
+else
+{
+    <p class="text-danger">No se pudo cargar la imagen del código QR. Intenta nuevamente.</p>
+}
