--- a/PetApp_Empresa/Views/Mascotas/FormularioAdopcion.cshtml
+++ b/PetApp_Empresa/Views/Mascotas/FormularioAdopcion.cshtml
@@ -1,4 +1,4 @@
-﻿@model PetApp_Empresa.Models.SolicitudAdopcionViewModel
+﻿@model PetApp_Empresa.Models.Adopcione
 
 <h2>Formulario de Solicitud de Adopción</h2>
 
