Funcionalidad "Pagar con QR":
Se agregó una nueva opción en el flujo de pago llamada "Pagar con QR".
Implementación de la vista para mostrar el QR, con botones para descargar la imagen y avanzar al formulario de pago.
Formulario de Pago:

Creación de una vista con un formulario para capturar datos del usuario (nombre, apellido, banco de destino, número de transacción) y cargar un comprobante de pago.
Guardado en Base de Datos:

Registro automático de compras y sus detalles en la tabla Compras de la base de datos al enviar el formulario de pago.
Limpieza del carrito de compras después de guardar la compra.
Historial de Compras:

Implementación de la vista HistorialCompras para mostrar automáticamente todas las compras realizadas, con detalles del accesorio comprado.
Corrección de Errores:

Se solucionó el problema de clave foránea (FOREIGN KEY) al permitir que TarjetaId sea opcional (nullable) en el modelo Compra.
Migración y actualización de la base de datos para reflejar los cambios en la estructura.
Flujo Completo Integrado:

El usuario puede realizar compras utilizando diferentes métodos de pago, y las compras se reflejan automáticamente en el historial con detalles completos.

--- a/PetApp_Empresa/Views/CarritoDeCompras/ConfirmacionPago.cshtml
+++ b/PetApp_Empresa/Views/CarritoDeCompras/ConfirmacionPago.cshtml
@@ -1,3 +1,4 @@
 ﻿<h2>Gracias por su compra</h2>
 <p>Su pago ha sido procesado con éxito.</p>
+<p>En cuanto verifiquemos su pago, nos pondremos en contacto con usted para coordinar el envio. Si esto no sucede a la brevedad, envia un mensaje a 72164449 adjuntando tu comprobante de pago.</p>
 <a asp-action="ListadoAccesorios" asp-controller="Accesorios">Volver a la tienda</a>
